objects/ssot__GiftCommitment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommitmentType__c</fullName>
        <label>Commitment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentGiftCmtScheduleId__c</fullName>
        <label>Current Gift Cmt Schedule</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorGiftConceptId__c</fullName>
        <label>Donor Gift Concept</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DonorId__c</fullName>
        <label>Donor</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveInterval__c</fullName>
        <label>Effective Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveTransactionPeriodName__c</fullName>
        <label>Effective Transaction Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedAssetMaturityDate__c</fullName>
        <label>Expected Asset Maturity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedAssetTransferDate__c</fullName>
        <label>Expected Asset Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedEndDate__c</fullName>
        <label>Expected End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedTotalCmtAmount__c</fullName>
        <label>Expected Total Cmt Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FormalCommitmentType__c</fullName>
        <label>Formal Commitment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FulfilmentType__c</fullName>
        <label>Fulfilment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftAgreementId__c</fullName>
        <label>Gift Agreement</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftVehicleType__c</fullName>
        <label>Gift Vehicle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftVehicle__c</fullName>
        <label>Gift Vehicle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Committment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAssetTransferExpected__c</fullName>
        <label>Is Asset Transfer Expected</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastPaidTransactionDate__c</fullName>
        <label>Last Paid Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextTransactionAmount__c</fullName>
        <label>Next Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NextTransactionDate__c</fullName>
        <label>Next Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OpportunityId__c</fullName>
        <label>Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyPhilanthropicRsrchPrflId__c</fullName>
        <label>Party Philanthropic Research Profile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PlannedGiftId__c</fullName>
        <label>Planned Gift</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrenceType__c</fullName>
        <label>Recurrence Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotCommitmentScheduleAmt__c</fullName>
        <label>Tot Commitment Schedule Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotExpcAssetMaturityValAmount__c</fullName>
        <label>Tot Expc Asset Maturity Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotExpcAssetTransferValAmount__c</fullName>
        <label>Tot Expc Asset Transfer Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAssetPresentValue__c</fullName>
        <label>Total Asset Present Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCurrentMonth__c</fullName>
        <label>Total Current Month</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCurrentQuarter__c</fullName>
        <label>Total Current Quarter</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCurrentYear__c</fullName>
        <label>Total Current Year</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalNextYear__c</fullName>
        <label>Total Next Year</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPaidTransactionAmount__c</fullName>
        <label>Total Paid Transaction Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TransactionPaymentCount__c</fullName>
        <label>Transaction Payment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WrittenOffAmount__c</fullName>
        <label>Written Off Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238497_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitment_CampaignId_map_Campai_rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftCommitment_CampaignId_map_Campai_rel</relationshipLabel>
        <relationshipName>rel_1697761238497_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238565_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitment_CurrentGiftCmtSchedul_rel</label>
        <referenceTo>ssot__GiftCommitmentSchedule__dlm</referenceTo>
        <relationshipLabel>GiftCommitment_CurrentGiftCmtSchedul_rel</relationshipLabel>
        <relationshipName>rel_1697761238565_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761238628_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCommitment_DonorId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>GiftCommitment_DonorId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1697761238628_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>